--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <!-- Праворуч: картинка -->
       <div class="intro-image">
-        <img src="dassssha.png" alt="Торт" width="350">
+        <img src="./dassssha.png" alt="Торт" width="350">
       </div>
     </section>
 
@@ -48,10 +48,10 @@
         від ніжних макаронсів до вишуканих тортів.</p>
 
       <div class="gallery">
-        <img src="/cakee22.png" alt="Макаронс" width="120">
-        <img src="/cakt222333.png" alt="Капкейки" width="120">
-        <img src="/cflw222.png" alt="Торт" width="120">
-        <img src="/cakt228.png" alt="Панкейк" width="120">
+        <img src="./cakee22.png" alt="Макаронс" width="120">
+        <img src="./cakt222333.png" alt="Капкейки" width="120">
+        <img src="./cflw222.png" alt="Торт" width="120">
+        <img src="./cakt228.png" alt="Панкейк" width="120">
       </div>
       <p class="highlight-text">
         Наші кондитери щодня створюють справжні шедеври, використовуючи тільки натуральні інгредієнти.
@@ -70,20 +70,20 @@
       <div class="review-list">
 
         <div class="review">
-          <img src="/girkkkk.jpg" alt="Клієнт 1">
+          <img src="./girkkkk.jpg" alt="Клієнт 1">
           <p>"Дуже смачні десерти! Замовляла торт на день народження — всі гості були у захваті."</p>
           <span>- Настя </span>
         </div>
 
         <div class="review">
-          <img src="/dzhenna-ortega.jpg" alt="Клієнт 2">
+          <img src="./dzhenna-ortega.jpg" alt="Клієнт 2">
           <p>"кекси просто неймовірні, відчувається, що зроблено з любов'ю ❤️"</p>
           <span>- Дженна</span>
         </div>
 
         <div class="review">
           <img
-            src="/fkpofdkjfdjfsjhfvhbfsdjhfvghlufd.jpg"
+            src="./fkpofdkjfdjfsjhfvhbfsdjhfvghlufd.jpg"
             alt="Клієнт 3">
           <p>"Швидка доставка та чудове оформлення! Обов'язково замовлю ще."</p>
           <span>- Енід </span>
@@ -98,8 +98,8 @@
     <h2>📍 Контакти</h2>
     <div class="contact-info">
       <p><strong>Адреса:</strong> вул. Соборна 25, Київ</p>
-      <p><strong>Телефон:</strong> <a href="tel:+380671234567">+38 (067) 123-45-67</a></p>
-      <p><strong>Email:</strong> <a href="mailto:info@mercedes.com.ua">info@mercedes.com.ua</a></p>
+      <p><strong>Телефон:</strong> <a href="tel:+3806666666">+38 (067) 123-45-67</a></p>
+      <p><strong>Email:</strong> <a href="mailto:snikers@mercedes.com.ua">info@mercedes.com.ua</a></p>
     </div>
 
     <div class="contact-map">
@@ -130,5 +130,6 @@
     </div>
   </section>
 </body>
+
 
 </html>
